--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">A_Go_Calc_for_Android</string>
 
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">編集</string>
+    <string name="action_reset">リセット</string>
+    <string name="title_activity_setting">SettingActivity</string>
 </resources>
